menu + All Movies (completed)

--- a/MovieManagement.csproj
+++ b/MovieManagement.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Entities\Director.cs" />
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Movie.cs" />
+    <Compile Include="Database\MyDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
