--- a/MovieManagement.csproj
+++ b/MovieManagement.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\Application.cs" />
     <Compile Include="Enums\Country.cs" />
     <Compile Include="Entities\Actor.cs" />
     <Compile Include="Entities\Director.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Database\MyDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\View.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
